# sugar_beet_harvest_mcf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: custom_benchmark.md
scripts/: prepare_data.py  run_experiments.py
src/data_prep/: data_generation.py  data_io.py  data_utils.py  main_instance_data.py  main_simulate_field_data.py  main_simulate_machine_data.py  production_planning.py  simulation_utils.py
src/experiments/: aggregated_sequencial_simulation_experiment.py  main_loading_rolling_real.py  main_loading_rolling_sim.py  real_benchmark.py  robustness_checks.py  single_instance_all.py  single_instance_double_sim.py  single_instance_single_sim.py  single_instance_triple_sim.py
src/mcf_utils/: BeetFlowClass.py  LoaderFlowClass.py  NearestNeighborHeuristicClass.py  RealBenchRoutingClass.py  heuristic_utils.py  loading_flow_utils.py  rolling_flow_utils.py  rolling_results_utils.py  single_results_utils.py
