[project]
name = "sugar-beet-harvest-mcf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas==1.0.1",
    "gurobipy==11.0.0",
    "k_means_constrained==0.7.2",
    "matplotlib>=3.6.2",
    "numpy==1.26.4",
    "pandas>=2.0.0",
    "pytest==8.3.5",
    "scikit_learn==1.1.3",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "Shapely==2.1.0",
    "openpyxl==3.1.5",
    "xlsxwriter == 3.2.0",
    "pre-commit>=4.2.0",
]
